crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/enum_member/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[input.sol:7:9]
   │
 7 │         A
   │         ┬  
   │         ╰── Error occurred here.
───╯
